# zerogw

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile.am  PKGBUILD.tpl  README.rst  TODO.txt  aclocal.m4  aconfig.h  aconfig.h.in  config.html  configure.ac  control.html  genindex.html  httptut.html  index.html  install.html  libtool  objects.inv  proto.html  search.html  searchindex.js  vagga.yaml  waf  wscript  wscript.bundle  wsocktut.html  zerogw.yaml
_sources/: config.txt  control.txt  httptut.txt  index.txt  install.txt  proto.txt
completion/: bash  zsh
doc/: Makefile  conf.py  httptut.rst  index.rst  install.rst  proto.rst  wsocktut.rst
examples/: README.rst  chat.pl  chat.py  crashing.py  echo.py  echoip.py  readstatus.py  websocket.html  ws.js  zerogw.yaml
examples/tabbedchat/: README.rst  TODO.txt  redis.conf  scale.sh  single_port_zerogw.py  single_socket.sh  start.sh  start_with_system_redis.sh  zerogw.yaml  zerogw_fd.yaml
examples/tabbedchat/public/: index.html
examples/tabbedchat/public/css/: main.css
examples/tabbedchat/public/css/ui-lightness/: tabs.css
examples/tabbedchat/public/js/: chat.js  jquery-ui.js  ws.js
examples/tabbedchat/tabbedchat/: __main__.py  auth.py  chat.py  loop.py  redis.py  service.py
nix/: coyaml.nix  default.nix  libwebsite.nix  mime-types.nix  pyzmq.nix  zerogw.nix
src/: accept4.c  automata.c  automata.h  binary-io.h  commands.c  commands.h  config.c  config.h  config.yaml  configbase.c  configbase.h  device.c  device.h  disk.c  disk.h  http.c  http.h  log.c  log.h  main.c  main.h  msgqueue.c  msgqueue.h  namedoutput.h  obstack.c  openport.c  polling.c  polling.h  pool.c  pool.h  request.c  request.h  resolve.c  resolve.h  sieve.c  sieve.h  statextra.h  statistics.h  uidgen.c  uidgen.h  (+6 more)
src/automata/: CMakeLists.txt
src/automata/src/: automata.h
src/automata/tests/: CMakeLists.txt  test1.c
test/: crash.py  crash1.yaml  crash2.yaml  frontend.py  list.py  simple.py  static.py  stop.py  test_nogz.txt  testfile.txt  tworoutes.py  tworoutes.yaml  wlimit.py  wlimit.yaml  zerogw.yaml
util/: conf.py  makeconfig.py  parse-config.yaml
