bin_PROGRAMS = zerogw
include_HEADERS=src/request.h src/pool.h src/polling.h src/resolve.h src/http.h src/uidgen.h src/commands.h src/main.h src/zutils.h src/disk.h src/sieve.h src/log.h src/msgqueue.h src/websocket.h src/namedoutput.h
ACLOCAL_AMFLAGS=-I m4
libcoyaml_la_SOURCES = src/commands.c src/disk.c src/http.c src/log.c src/main.c src/msgqueue.c src/openport.c src/polling.c src/pool.c src/request.c src/resolve.c src/sieve.c src/uidgen.c src/websocket.c src/zerogwctl.c src/zutils.c
AM_CFLAGS=-std=c11 -I/usr/include 
